objects/WordPress_Response__c.object
<CustomObject>
    <fields>
        <fullName>Client_Email__c</fullName>
        <label>Client Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Client Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Detail__c</fullName>
        <label>Error Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <label>Response Body</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wordpress_Id__c</fullName>
        <label>Wordpress Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>WordPress Response</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>WordPress Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WordPress Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>